--- a/src/components/InputInProfile/InputInProfile.css
+++ b/src/components/InputInProfile/InputInProfile.css
@@ -1,10 +1,10 @@
-.InputInProfile {
+.inputInProfile {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.InputInProfile__input {
+.inputInProfile__input {
   width: 100%;
   height: 45px;
   margin: 0;
@@ -20,13 +20,17 @@
   color: #fff;
 }
 
+.inputInProfile__input:focus {
+  outline: 2px solid #3ddc84;
+}
+
 @media screen and (max-width: 520px) {
-  .InputInProfile__input {
+  .inputInProfile__input {
     height: 44px;
   }
 }
 
-.InputInProfile__label {
+.inputInProfile__label {
   width: 141px;
   margin: 0;
   font-size: 11px;
@@ -38,11 +42,11 @@
 
 /**/
 
-.InputInProfile__input_type_error {
+.inputInProfile__input_type_error {
   color: #ee3465;
 }
 
-.InputInProfile__input-error {
+.inputInProfile__input-error {
   padding-top: 10px;
   font-size: 10px;
   font-weight: 400;
