--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,4 +1,4 @@
-.NotFound {
+.notFound {
   width: 100%;
   height: 700px;
   display: flex;
@@ -6,18 +6,18 @@
 }
 
 @media screen and (max-width: 830px) {
-  .NotFound {
+  .notFound {
     height: 1024px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .NotFound {
+  .notFound {
     height: 780px;
   }
 }
 
-.NotFound__404 {
+.notFound__404 {
   margin: 246px auto 5px;
   font-size: 140px;
   line-height: 169px;
@@ -26,13 +26,13 @@
 }
 
 @media screen and (max-width: 830px) {
-  .NotFound__404 {
+  .notFound__404 {
     margin-top: 408px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .NotFound__404 {
+  .notFound__404 {
     margin-top: 329px;
     margin-bottom: 10px;
     font-size: 80px;
@@ -40,7 +40,7 @@
   }
 }
 
-.NotFound__text {
+.notFound__text {
   margin: 0 auto;
   font-size: 16px;
   line-height: 19px;
@@ -49,13 +49,13 @@
 }
 
 @media screen and (max-width: 520px) {
-  .NotFound__text {
+  .notFound__text {
     font-size: 12px;
     line-height: 15px;
   }
 }
 
-.NotFound__back-link {
+.notFound__back-link {
   margin: 184px auto 60px;
   font-size: 14px;
   line-height: 17px;
@@ -65,7 +65,7 @@
 }
 
 @media screen and (max-width: 830px) {
-  .NotFound__back-link {
+  .notFound__back-link {
     margin-top: 284px;
     margin-bottom: 30px;
   }
