--- a/src/components/AuthNav/AuthNav.css
+++ b/src/components/AuthNav/AuthNav.css
@@ -1,8 +1,8 @@
-.AuthNav {
+.authNav {
   display: flex;
 }
 
-.AuthNav__signup-link {
+.authNav__signup-link {
   text-align: center;
   margin: auto 0 auto auto;
   text-decoration: none;
@@ -13,17 +13,17 @@
   transition: 0.3s opacity;
 }
 
-.AuthNav__signup-link:hover {
+.authNav__signup-link:hover {
   opacity: 0.7;
 }
 
 @media screen and (max-width: 520px) {
-  .AuthNav__signup-link {
+  .authNav__signup-link {
     font-size: 10px;
   }
 }
 
-.AuthNav__signin-button {
+.authNav__signin-button {
   width: 76px;
   height: 32px;
   margin-left: 30px;
@@ -40,12 +40,12 @@
   transition: 0.3s opacity;
 }
 
-.AuthNav__signin-button:hover {
+.authNav__signin-button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 520px) {
-  .AuthNav__signin-button {
+  .authNav__signin-button {
     width: 54px;
     height: 26px;
     margin-left: 14px;
