--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,5 +1,11 @@
-.Logo {
+.logo {
   margin: 0;
   width: 38px;
   height: 38px;
+  cursor: pointer;
+  transition: 0.3s opacity;
+}
+
+.logo:hover {
+  opacity: 0.7;
 }
