--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,4 +1,4 @@
-.Portfolio {
+.portfolio {
   box-sizing: border-box;
   background-color: #202020;
   width: 100%;
@@ -11,20 +11,20 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Portfolio {
+  .portfolio {
     padding: 0 50px;
     min-height: 470px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Portfolio {
+  .portfolio {
     padding: 0 14px;
     min-height: 274px;
   }
 }
 
-.Portfolio__title {
+.portfolio__title {
   max-width: 250px;
   margin: 90px 0 50px;
   font-size: 18px;
@@ -34,14 +34,14 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Portfolio__title {
+  .portfolio__title {
     margin-top: 80px;
     color: #a0a0a0;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Portfolio__title {
+  .portfolio__title {
     margin-top: 90px;
     margin-bottom: 20px;
     font-size: 14px;
@@ -49,23 +49,23 @@
   }
 }
 
-.Portfolio__links {
+.portfolio__links {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
 @media screen and (max-width: 520px) {
-  .Portfolio__links {
+  .portfolio__links {
     margin-bottom: 70px;
   }
 }
 
-.Portfolio__item {
+.portfolio__item {
   width: 100%;
 }
 
-.Portfolio__link {
+.portfolio__link {
   text-decoration: none;
   color: #fff;
   display: flex;
@@ -78,24 +78,24 @@
   transition: 0.3s opacity;
 }
 
-.Portfolio__link:hover {
+.portfolio__link:hover {
   opacity: 0.7;
 }
 
 @media screen and (max-width: 830px) {
-  .Portfolio__link {
+  .portfolio__link {
     font-size: 28px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Portfolio__link {
+  .portfolio__link {
     font-size: 18px;
     line-height: 28px;
   }
 }
 
-.Portfolio__arrow {
+.portfolio__arrow {
   width: 29px;
   height: 60px;
   background-image: url('../../images/arrow.svg');
@@ -104,20 +104,20 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Portfolio__arrow {
+  .portfolio__arrow {
     width: 27px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Portfolio__arrow {
+  .portfolio__arrow {
     width: 18px;
     height: 28px;
     background-image: url('../../images/arrow-small.svg');
   }
 }
 
-.Portfolio__line {
+.portfolio__line {
   width: 100%;
   height: 1px;
   margin: 9px 0 20px;
@@ -125,13 +125,13 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Portfolio__line {
+  .portfolio__line {
     background-color: #e6e6e6;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Portfolio__line {
+  .portfolio__line {
     margin-top: 19px;
   }
 }
