--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,4 +1,4 @@
-.Techs {
+.techs {
   box-sizing: border-box;
   background-color: #272727;
   width: 100%;
@@ -11,26 +11,26 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Techs {
+  .techs {
     padding: 0 50px;
     min-height: 567px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Techs {
+  .techs {
     padding: 0 18px;
   }
 }
 
 @media screen and (max-width: 380px) {
-  .Techs {
+  .techs {
     min-height: 651px;
     background-color: #202020;
   }
 }
 
-.Techs__title {
+.techs__title {
   width: 50%;
   margin: 100px 0 0 0;
   font-size: 22px;
@@ -41,7 +41,7 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Techs__title {
+  .techs__title {
     margin-top: 90px;
     font-size: 18px;
     line-height: 22px;
@@ -49,12 +49,12 @@
 }
 
 @media screen and (max-width: 520px) {
-  .Techs__title {
+  .techs__title {
     margin-top: 70px;
   }
 }
 
-.Techs__line {
+.techs__line {
   width: 100%;
   height: 1px;
   margin: 23px 0 90px;
@@ -62,20 +62,20 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Techs__line {
+  .techs__line {
     margin-bottom: 80px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Techs__line {
+  .techs__line {
     margin-top: 28px;
     margin-bottom: 60px;
     background-color: #000;
   }
 }
 
-.Techs__subtitle {
+.techs__subtitle {
   font-size: 50px;
   line-height: 58px;
   font-weight: 400;
@@ -85,20 +85,20 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Techs__subtitle {
+  .techs__subtitle {
     margin-bottom: 22px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .Techs__subtitle {
+  .techs__subtitle {
     margin-bottom: 24px;
     font-size: 30px;
     line-height: 36px;
   }
 }
 
-.Techs__text {
+.techs__text {
   max-width: 460px;
   font-size: 14px;
   line-height: 20px;
@@ -110,20 +110,20 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Techs__text {
+  .techs__text {
     font-size: 12px;
     line-height: 18px;
   }
 }
 
 @media screen and (max-width: 830px) {
-  .Techs__text {
+  .techs__text {
     font-size: 11px;
     line-height: 16px;
   }
 }
 
-.Techs__icons {
+.techs__icons {
   width: 100%;
   max-width: 689px;
   margin: 100px auto;
@@ -135,7 +135,7 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Techs__icons {
+  .techs__icons {
     margin-top: 83px;
     margin-bottom: 90px;
     max-width: 648px;
@@ -143,7 +143,7 @@
 }
 
 @media screen and (max-width: 680px) {
-  .Techs__icons {
+  .techs__icons {
     margin-top: 70px;
     grid-template-columns: repeat(4, 1fr);
     max-width: 366px;
@@ -151,7 +151,7 @@
 }
 
 @media screen and (max-width: 520px) {
-  .Techs__icons {
+  .techs__icons {
     margin-top: 64px;
     margin-bottom: 80px;
     grid-template-columns: repeat(3, 1fr);
@@ -160,7 +160,7 @@
 }
 
 @media screen and (max-width: 380px) {
-  .Techs__icons {
+  .techs__icons {
     margin-top: 50px;
     margin-bottom: 70px;
     grid-template-columns: repeat(2, 1fr);
@@ -168,7 +168,7 @@
   }
 }
 
-.Techs__icon {
+.techs__icon {
   height: 60px;
   background-color: #303030;
   border-radius: 10px;
@@ -183,7 +183,7 @@
 }
 
 @media screen and (max-width: 830px) {
-  .Techs__icon {
+  .techs__icon {
     height: 57px;
     font-size: 12px;
     line-height: 15px;
